--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light dark;
-  color: white
+  color: white;
   background-color: #030615;
 
   font-synthesis: none;
@@ -25,6 +24,8 @@
 .imageContainer{
   display: flex;
   flex-direction: column;
+  max-height: 100vh;
+  width: 100%;
 
 }
 .bgImage{
@@ -42,6 +43,33 @@ footer{
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
+  padding: 1rem;
+}
+footer div{
+  display: flex;
+  flex-direction: column;
+}
+footer h2{
+  font-size: 2rem;
+}
+footer h1{
+  font-size: 1.5rem;
+  font-weight: 200;
+}
+footer button{
+  background:transparent;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 1rem;
+  cursor: pointer;
+  transition-duration: 200ms;
+}
+footer button i{
+  font-size: 1.3rem;
+}
+footer button:hover{
+  opacity: 0.7;
 }
 .bgGradient{
   position:absolute;
@@ -55,11 +83,91 @@ footer{
   display: flex;
   flex-direction: column;
   z-index: 10;
-
 }
+
 .bgOverLay{
-  position: inherit;
-  inset: inherit;
+  position: absolute;
+  inset: 0;
   background: #030615;
   opacity: 0.6;
 }
+.sidebarContents{
+  z-index: 15;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  overflow-y: scroll;
+  height: 100%;
+  width: 80%;
+  max-width: 800px;
+  margin-left: auto;
+  background: #030615;
+}
+.sidebarContents div{
+  flex: 1;
+}
+.sidebarContents button{
+  background: transparent;
+  color: white;
+  border: none;
+  outline: none;
+  margin-right: auto;
+  cursor: pointer;
+  transition-duration: 200ms;
+  padding: 1rem 0;
+}
+.sidebarContents button:hover{
+  opacity: 0.7;
+}
+.sidebarContents h2{
+  font-size: 1.5rem;
+  font-weight: 200;
+}
+.descriptionContainer{
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.descriptionTitle{
+  font-size: 1.2rem;
+  font-weight: 200;
+}
+
+.loadingState{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+.loadingState i{
+  opacity: 0.2;
+  font-size: 3rem;
+  animation: spin 1s linear infinite ;
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@media (min-width:640px){
+  .sidebar{
+    position: relative;
+    inset:unset;
+    min-width: 30%;
+    box-shadow: 0 0 40px 1px #030615;
+  }
+  .sidebarContents{
+    margin: unset;
+    width: 100%;
+  }
+  .bgOverLay{
+    right: 0;
+    left: unset;
+    width: 100vw;
+  }
+} 
